# World-Discovery-Engine

./: .dockerignore  .dockerignore-light  .dvcignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.mdd  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  ETHICS.md  LICENSE  Makefile  README.md  README_DEV.md  README_Kaggle.md  SECURITY.md  datasets.md  dvc.yaml  pyproject.toml  requirements-kaggle.txt  requirments.txt
.github/: ARCHITECTURE.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  artifact_manifest_check.yml  codeowners_gate.yml
.github/ISSUE_TEMPLATE/: ARCHITECTURE.md  README.md  SECURITY.md  bug_report.yml  config_update.yml  feature_request.yml  new_dataset.yml  performance_update.yml  security_report.yml  task_tracking.yml
.github/workflows/: ARCHITECTURE.md  README.md  dataset-intake-validate.yml  datasets_registry_gate.yml  kaggle_notebook_check.yml  kaggle_notebook_ci.yml  notebook_publish.yml  pr_labeler.yml  pr_title_lint.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  KAGGLE_WORKFLOW.md  README.md
notebooks/: README.md  WDE_End_to_End.ipynb  WDE_Kaggle_Starter.ipynb  kaggle.yaml  wde_kaggle.ipynb
scripts/: ARCHITECTURE.md  README.md  export_kaggle.sh  fetch_datasets.sh  generate_reports.sh  profiling_tools.py  run_pipeline.sh  validate_artifacts.py  write_run_manifest.py
src/: README.md
src/wde/: __init__.py  __main__.py  cli.py
src/wde/configs/: aoi_library.yaml  data.yaml  datasources.yaml  default.yaml  detect.yaml  dossier.yaml  pipeline.yaml  preprocess.yaml  test_offline.yaml
src/wde/data/: ade_discovery_pipeline.ipynb  fetch.py  preprocess.py
src/wde/detect/: run.py
src/wde/dossier/: build.py
src/wde/utils/: io.py  log.py
tests/: README.md  conftest.py  test_detect.py  test_evaluate.py  test_ingest.py  test_report.py  test_verify.py
tests/data/: README.md  make_fixtures.py
tests/notebooks/: README.md  test_kaggle_path.py  test_notebook_pipeline.py
tools/: geo_io.py  kaggle_utils.py  wde_export.py  wde_features.py  wde_pipeline.py  wde_scoring.py
world_engine/: ARCHITECTURE.md  README.md  __init__.py  __main__.py  cli.py  detect.py  ethics_guardrails.py  evaluate.py  ingest.py  report.py  verify.py
world_engine/models/: ARCHITECURE.md  README.md  __init__.py  ade_fingerprint.py  anomaly_detector.py  baselines.py  causal_pag.py  gnn_fusion.py  uncertainty_bgnn.py  vlm_caption.py
world_engine/utils/: README.md  __init__.py  config_loader.py  env.py  ethics.py  geospatial.py  image_utils.py  logging_utils.py  text_utils.py
