# FILE: pyproject.toml
# -------------------------------------------------------------------------------------------------
[tool.poetry]
name = "wde"
version = "0.1.0"
description = "World Discovery Engine (WDE): multi-modal AI for archaeology & earth systems"
authors = ["OpenAI → Z Challenge Team <devnull@example.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "wde", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Core
numpy = "^2.0"
pandas = "^2.2"
pyyaml = "^6.0"
typer = {version = "^0.12.5", extras = ["all"]}
rich = "^13.7"
tqdm = "^4.66"
# Geo stack (via wheels where possible)
geopandas = {version="^1.0", optional=true}
rasterio = {version="^1.4", optional=true}
rioxarray = {version="^0.15", optional=true}
xarray = {version="^2024.6", optional=true}
shapely = {version="^2.0", optional=true}
pyproj = {version="^3.6", optional=true}
# ML / CV (light defaults; pin heavy libs in your env if needed)
scikit-learn = {version="^1.5", optional=true}
torch = {version="^2.3", optional=true}
torchvision = {version="^0.18", optional=true}
# Viz / Notebook
matplotlib = {version="^3.9", optional=true}
plotly = {version="^5.24", optional=true}
folium = {version="^0.17", optional=true}
ipykernel = {version="^6.29", optional=true}
nbformat = {version="^5.10", optional=true}
nbconvert = {version="^7.16", optional=true}
# Data & pipelines
dvc = "^3.55"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8"
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13"

[tool.poetry.extras]
geo = ["geopandas", "rasterio", "rioxarray", "xarray", "shapely", "pyproj"]
ml = ["scikit-learn", "torch", "torchvision"]
viz = ["matplotlib", "plotly", "folium"]
notebook = ["ipykernel", "nbformat", "nbconvert"]

[tool.poetry.scripts]
wde = "wde.cli:app"  # add src/wde/cli.py later

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"