# FILE: pyproject.toml
# -------------------------------------------------------------------------------------------------
[tool.poetry]
name = "world-discovery-engine"
version = "0.2.0"
description = "World Discovery Engine (WDE): multi-modal AI pipeline for archaeology & earth systems"
authors = ["OpenAI → Z Challenge Team <devnull@example.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "world_engine" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core scientific stack
numpy = "^2.0"
pandas = "^2.2"
pyyaml = "^6.0"
typer = {version = "^0.12.5", extras = ["all"]}
rich = "^13.7"
tqdm = "^4.66"

# Geospatial & remote sensing
geopandas = {version="^1.0", optional=true}
rasterio = {version="^1.4", optional=true}
rioxarray = {version="^0.15", optional=true}
xarray = {version="^2024.6", optional=true}
shapely = {version="^2.0", optional=true}
pyproj = {version="^3.6", optional=true}
folium = {version="^0.17", optional=true}

# ML / CV / AI
scikit-learn = {version="^1.5", optional=true}
torch = {version="^2.3", optional=true}
torchvision = {version="^0.18", optional=true}
torch-geometric = {version="^2.5", optional=true}
opencv-python-headless = {version="^4.10", optional=true}

# Bayesian / causal inference
pyro-ppl = {version="^1.9", optional=true}
networkx = "^3.2"
pgmpy = {version="^0.1.24", optional=true}

# Visualization / reporting / notebook
matplotlib = {version="^3.9", optional=true}
plotly = {version="^5.24", optional=true}
ipykernel = {version="^6.29", optional=true}
nbformat = {version="^5.10", optional=true}
nbconvert = {version="^7.16", optional=true}
reportlab = {version="^4.2", optional=true}

# Data pipelines & env
dvc = "^3.55"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8"
pytest = "^8.3"
pytest-cov = "^5.0"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13"

[tool.poetry.extras]
geo = ["geopandas", "rasterio", "rioxarray", "xarray", "shapely", "pyproj", "folium"]
ml = ["scikit-learn", "torch", "torchvision", "torch-geometric", "opencv-python-headless"]
viz = ["matplotlib", "plotly", "reportlab"]
notebook = ["ipykernel", "nbformat", "nbconvert"]
causal = ["pyro-ppl", "pgmpy"]

[tool.poetry.scripts]
wde = "world_engine.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"