[tool.poetry]
name = "world-discovery-engine"
version = "0.3.0"
description = "World Discovery Engine (WDE): multi-modal AI pipeline for archaeology & earth systems"
authors = ["OpenAI → Z Challenge Team <devnull@example.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "world_engine" }]
homepage = "https://github.com/openai-to-z/world-discovery-engine"
repository = "https://github.com/openai-to-z/world-discovery-engine"
documentation = "https://openai-to-z.github.io/world-discovery-engine"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core scientific + pipeline stack
numpy = "^2.0"
pandas = "^2.2"
pyyaml = "^6.0"
typer = {version = "^0.12.5", extras = ["all"]}
rich = "^13.7"
tqdm = "^4.66"
python-dotenv = "^1.0"
dvc = "^3.55"

# Geospatial & remote sensing
geopandas = {version="^1.0", optional=true}
rasterio = {version="^1.4", optional=true}
rioxarray = {version="^0.15", optional=true}
xarray = {version="^2024.6", optional=true}
shapely = {version="^2.0", optional=true}
pyproj = {version="^3.6", optional=true}
folium = {version="^0.17", optional=true}
pystac-client = {version="^0.7", optional=true}
sentinelsat = {version="^1.2", optional=true}

# ML / CV / AI
scikit-learn = {version="^1.5", optional=true}
torch = {version="^2.3", optional=true}
torchvision = {version="^0.18", optional=true}
torch-geometric = {version="^2.5", optional=true}
opencv-python-headless = {version="^4.10", optional=true}
transformers = {version="^4.44", optional=true}
clip-anytorch = {version="^2.6", optional=true}

# Bayesian / causal inference
pyro-ppl = {version="^1.9", optional=true}
networkx = "^3.2"
pgmpy = {version="^0.1.24", optional=true}
dowhy = {version="^0.12", optional=true}
causal-learn = {version="^0.1.3", optional=true}

# Visualization / reporting / notebook
matplotlib = {version="^3.9", optional=true}
plotly = {version="^5.24", optional=true}
ipykernel = {version="^6.29", optional=true}
nbformat = {version="^5.10", optional=true}
nbconvert = {version="^7.16", optional=true}
reportlab = {version="^4.2", optional=true}
altair = {version="^5.4", optional=true}
seaborn = {version="^0.13", optional=true}

# Simulation & modeling
mesa = {version="^2.1", optional=true}          # agent-based modeling
simpy = {version="^4.1", optional=true}        # discrete-event simulation
networkit = {version="^11.0", optional=true}   # fast graph analysis
pymc = {version="^5.15", optional=true}        # Bayesian MCMC

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8"
pytest = "^8.3"
pytest-cov = "^5.0"
coverage = "^7.6"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13"
mypy = "^1.11"

[tool.poetry.extras]
geo = ["geopandas", "rasterio", "rioxarray", "xarray", "shapely", "pyproj", "folium", "pystac-client", "sentinelsat"]
ml = ["scikit-learn", "torch", "torchvision", "torch-geometric", "opencv-python-headless", "transformers", "clip-anytorch"]
viz = ["matplotlib", "plotly", "reportlab", "altair", "seaborn"]
notebook = ["ipykernel", "nbformat", "nbconvert"]
causal = ["pyro-ppl", "pgmpy", "dowhy", "causal-learn"]
sim = ["mesa", "simpy", "networkit", "pymc"]

[tool.poetry.scripts]
wde = "world_engine.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "I", "UP", "N", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-q -ra --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["world_engine"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
